--- a/7672e65322b74d9786fab48397174db1.opf/meta.yml
+++ b/7672e65322b74d9786fab48397174db1.opf/meta.yml
@@ -5,6 +5,6 @@ source_metadata:
     4c2a0f91272444ed974124f2c10dcb9a:
       base_file: v092.txt
       image_group_id: I1PD95938
-      title: ''
+      title: འཕགས་པ་གཞི་ཐམས་ཅད་ཡོད་པར་སྨྲ་བའི་དགེ་ཚུལ་གྱི་ཚིག་ལེའུར་བྱས་པའི་འགྲེལ་པ་འོད་ལྡན།
       total_pages: 1484
       volume_number: 93
