--- a/D2904A406.opf/index.yml
+++ b/D2904A406.opf/index.yml
@@ -4,8 +4,8 @@ revision: '00001'
 annotations:
   f5fded1c12d6481dba623b4d180851ef:
     parts: {}
+    work_id: D4125
     span:
-    - vol: 93
+    - base: 4b56
       start: 0
       end: 335219
-    work_id: D4125
